--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -4,6 +4,12 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
+ /* Fonts */
+@font-face {
+    font-family: irisFont;
+    src: url(../fonts/Thinking_of_Betty.ttf);
+}
+
 body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
@@ -25,14 +31,16 @@ body {
 
 .headline h1 {
     font-size: 130px;
-    background: #fff;
-    background: rgba(255,255,255,0.9);
+/*    background: #fff;
+    background: rgba(255,255,255,0.9);*/
+    font-family: irisFont;
 }
 
 .headline h2 {
-    font-size: 64px;
-    background: #fff;
-    background: rgba(255,255,255,0.9);
+    font-size: 48px;
+/*    background: #fff;
+    background: rgba(255,255,255,0.9);*/
+    font-family: irisFont;
 }
 
 .featurette-divider {
