--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -9,6 +9,25 @@
     font-family: irisFont;
     src: url(../fonts/Thinking_of_Betty.ttf);
 }
+@font-face {
+    font-family: navFont;
+    src: url(../fonts/paperdaisy-demo.ttf);
+}
+
+a.navbar-brand{
+    font-family: navFont;
+    font-size: 48px;
+}
+
+nav{
+    font-family: navFont;
+    font-size: 32px;
+}
+
+a.backToTop{
+    font-family: navFont;
+    font-size: 24px;
+}
 
 body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
@@ -18,7 +37,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
+    background: url('https://media.giphy.com/media/OYfQ5c7FPeBxe/giphy.gif') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -34,6 +53,8 @@ body {
 /*    background: #fff;
     background: rgba(255,255,255,0.9);*/
     font-family: irisFont;
+    color: white;
+    text-shadow: 5px 2px 4px black;
 }
 
 .headline h2 {
@@ -41,6 +62,8 @@ body {
 /*    background: #fff;
     background: rgba(255,255,255,0.9);*/
     font-family: irisFont;
+    color: white;
+    text-shadow: 5px 2px 4px black;
 }
 .title h3{
     font-size: 48px;
