--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -88,6 +88,7 @@ body {
     font-size: 56px;
     font-family: irisFont;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .featurette-divider {
